force-app/main/default/objects/OPS_FLStatus__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Unit__c</fullName>
        <label>Engineering Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Text__c</fullName>
        <label>Functional Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>OPS FLStatus</relationshipLabel>
        <relationshipName>OPS_FLStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Values__c</fullName>
        <label>Old Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_MainWC_Text__c</fullName>
        <label>SAP MainWC Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_MainWC__c</fullName>
        <label>SAP MainWC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>New</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Delete</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Modified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Equipment individual name</description>
        <externalId>true</externalId>
        <label>Tag ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tag_Name__c</fullName>
        <label>Tag Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp_Text__c</fullName>
        <label>Time Stamp Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OPS FLStatus</label>
    <nameField>
        <label>OPS FLStatus Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>